# search-and-discover

./: .gitignore  .yarnrc.yml  package.json  tsconfig.json
.turbo/cache/: 3d82f3d9b6a5716d-meta.json  3d82f3d9b6a5716d.tar.zst  44d10c4bcb87fd9c-meta.json  44d10c4bcb87fd9c.tar.zst  efac534f81bccbf7-meta.json  efac534f81bccbf7.tar.zst
python/browser-agent/: .env  .gitignore  pyproject.toml  requirements.txt  test.py  test_server.py
python/browser-agent/src/: app.py
python/browser-agent/src/api/: endpoints.py
python/browser-agent/src/browser_agent/: app.py  config.py
python/browser-agent/src/browser_agent/api/: endpoints.py
python/browser-agent/src/browser_agent/core/: init_server.py  server_manager.py
python/browser-agent/src/browser_agent/core/singletons/: server_state.py
python/browser-agent/src/browser_agent/core/utils/: send_command.py  server_logging.py
python/browser-agent/src/core/: command_runner.py  generate_jpeg_frame.py  generate_mpng_frames.py  screenshot_socket.py  session.py  session_manager.py
python/browser-agent/src/core/utils/: command_runner.py
typescript/: .gitignore  biome.json  package.json  tsconfig.json
typescript-2/: turbo.json
